# circuithub-prelude

./: CHPrelude.hs  LICENSE  README.md  circuithub-prelude.cabal  default.nix
Control/Applicative/: Extra.hs
Control/Monad/: Extra.hs
Data/Bifunctor/: Extra.hs
Data/ByteString/: Extra.hs
Data/Either/: Extra.hs
Data/Either/Validation/: Extra.hs
Data/Functor/: Extra.hs
Data/HashMap/: Extra.hs
Data/Hex/: Extra.hs
Data/List/: Extra.hs
Data/List/Split/: Extra.hs
Data/Map/Strict/: Extra.hs
Data/Maybe/: Extra.hs
Data/Proxy/: Extra.hs
Data/Text/: Clean.hs  Convert.hs  Read.hs  Sequences.hs
Data/Text/Read/: Extra.hs
Data/Time/: Extra.hs
Data/Tuple/: Extra.hs
Debug/Trace/: Extra.hs
Safe/: Extra.hs
